# zero

./: .gitignore  CLAUDE.md  README.md  examples.py  main.py  pyproject.toml
docs/ideas/: ai-powered-docs.md  automatic-purity-tracking.md  builtin-stubs.md  determinism-and-memory.md  language-server.md  modules-and-imports.md
docs/plans/: 2025-01-07-control-flow-design.md  2025-01-07-for-loop-design.md  2025-01-08-float-design.md  2025-01-09-bytecode-compilation-design.md  2025-01-09-bytecode-compilation-implementation.md  2025-01-09-lsp-design.md  2025-01-09-lsp-implementation.md
examples/: 01_hello.zr  02_variables.zero  03_arithmetic.zero  04_functions.zr  05_conditionals.zr  06_loops.zr  07_recursion.zr  08_strings.zr  09_putting_it_together.zr  add.zero  compound_assignment.zero  control_flow.zero  fibonacci.zero  fibonacci_step.zero  for_loop.zero  showcase.zero  simple.zero  timestamp.zero
tests/: test_builtins.py  test_bytecode_io.py  test_cache.py  test_cli.py  test_compiler.py  test_integration.py  test_lexer.py  test_lsp_diagnostics.py  test_lsp_find.py  test_lsp_integration.py  test_parser.py  test_semantic.py  test_vm.py
zero/: ast.py  builtins.py  bytecode.py  cache.py  compiler.py  lexer.py  parser.py  semantic.py  vm.py
zero-vscode/: extension.js  package-lock.json  package.json
zero-vscode/syntaxes/: zero.tmLanguage.json
zero/lsp/: __main__.py  features.py  server.py
