[project]
name = "zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lsprotocol>=2025.0.0",
    "msgpack>=1.0.0",
    "pygls>=2.0.0",
    "typer>=0.9.0",
]

[project.scripts]
zero = "main:app"
examples = "examples:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["zero", "main.py", "examples.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "PLC0415" # import-outside-top-level
]
